k8s/ingress/ingress_demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: newtest
  name: newtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newtest
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: newtest
    spec:
      containers:
      - image: akicontport/webapp:ver2
        name: webapp
        resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: newtest
  name: newtest
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: newtest
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: newtest
            port:
              number: 80
