k8s/ingress/nginx_ingress_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bcpostgres
  name: bcpostgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcpostgres
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bcpostgres
    spec:
      containers:
      - image: postgres
        name: postgres
        resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bcpostgres
  name: bcpostgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: bcpostgres
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-bcpostgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bcpostgres.asgard.bc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bcpostgres
            port:
              number: 5432
